fix: turn off the overflow

--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -1,3 +1,14 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html, body {
+    background-color: #f8fafc;
+    overscroll-behavior: none;
+  }
+  
+  html.dark, html.dark body {
+    background-color: #0f172a;
+  }
+}
